[gd_scene load_steps=15 format=2]

[ext_resource path="res://src/General/DropZone.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Enemy/EnemySprite.gd" type="Script" id=2]
[ext_resource path="res://src/Assets/healthbar.png" type="Texture" id=3]
[ext_resource path="res://src/Assets/armor.png" type="Texture" id=4]
[ext_resource path="res://src/Assets/slimebuddy.png" type="Texture" id=5]
[ext_resource path="res://src/Assets/healthbar_empty.png" type="Texture" id=6]
[ext_resource path="res://src/Assets/Bosses/hedgehog.jpg" type="Texture" id=7]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 224, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 32, 224, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 64, 224, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 96, 224, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 128, 224, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 160, 224, 32, 32 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="EncounterBase" type="Node2D" groups=["Characters", "Enemies"]]
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="DropZone" parent="." instance=ExtResource( 1 )]
modulate = Color( 1, 1, 1, 0.478431 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 10, 10 )
frames = SubResource( 7 )
frame = 5
playing = true

[node name="StaticSprite" type="Sprite" parent="."]
scale = Vector2( 0.202222, 0.202222 )
texture = ExtResource( 7 )

[node name="LifeBar" type="TextureProgress" parent="."]
margin_left = -90.0
margin_top = -175.0
margin_right = 399.0
margin_bottom = -55.0
rect_scale = Vector2( 0.35, 0.35 )
value = 10.0
texture_over = ExtResource( 6 )
texture_progress = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Life" type="Label" parent="LifeBar"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 151.429
margin_top = 25.7143
margin_right = 201.429
margin_bottom = 39.7143
rect_scale = Vector2( 5, 5 )
text = "0/0"
align = 1

[node name="ArmorClass" type="Sprite" parent="."]
position = Vector2( -120, -64 )
scale = Vector2( 0.203125, 0.203125 )
texture = ExtResource( 4 )

[node name="Armor" type="Label" parent="ArmorClass"]
margin_left = -80.0
margin_top = -60.0
margin_right = -64.0
margin_bottom = -44.0
rect_scale = Vector2( 10, 10 )
text = "5"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
